@startuml
!theme crt-green

class Book {
+isbn : CharField
+title : CharField
+subtitle : CharField
+author : Author[1..*]
*publication_year : PositiveSmallIntegerField
+categories : Categories[1]
+thumbnail : UrlField
+summary : CharField
+page_count : PositiveSmallIntegerField
+average_rating : DecimalField
+ratings_count : PositiveIntegerField
--
+__str__ : String
}

class Author {
+name : CharField
+books : Book[1..*]
--
+__str__ : String
}

class Categories {
+name : CharField
--
+__str__ : String
}

class BookInstance {
+unique_id : UUIDField
+due_back : DateField
+status : LOAN_STATUS
+book : Book[1]
+borrower : User[1]
--
+__str__ : String
}

Book "1..*" -- "1..*" Author
Book "0..*" -- "1" Categories
BookInstance "1..*" - "1" Book : "      "

@enduml